[gd_scene load_steps=4 format=3 uid="uid://b4soss4wqnqlv"]

[ext_resource type="Texture2D" uid="uid://c1pyvaodhi2ex" path="res://Relics/Spray Bottle/spray_bottle.png" id="1_nnmb6"]
[ext_resource type="Script" uid="uid://bw3n2qidbdigf" path="res://Relics/relic_ui.gd" id="2_mv0mx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7f75j"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.99215686, 1, 0)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="RelicUI" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7f75j")
script = ExtResource("2_mv0mx")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_nnmb6")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
